Opened 14 years ago

Closed 14 years ago

#7382 closed bug (fixed)

Shift-Alt-W does not "Leave as New"

Reported by: jonas.kirilla Owned by: czeidler
Priority: normal Milestone: R1
Component: Applications/Mail Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Closing a a window by pressing Shift-Alt-W does not keep the status "New". In hrev41022.

Change History (1)

comment:1 by czeidler, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev41063.

Note: See TracTickets for help on using tickets.