Leave status when quit window using the control+shift+w shortcut. Fixes #7382.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41063 a95241bf-73f2-0310-859d-f6bbb57e9c96